--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Coral Weapon</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <script src="https://cdn.firebase.com/js/client/1.1.3/firebase.js"></script>
     <script src="https://www.google.com/jsapi"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAaL8lVGF97jWDNHRyLex7RFOQJAWoGUA"></script>
     <script src="http://code.jquery.com/jquery-2.1.1.js"></script>
